# plasmic

./: .envrc  .eslintignore  .eslintrc.js  .eslintrc.react.js  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .lintstagedrc.js  .pre-commit-config.yaml  .prettierignore  .prettierrc  .regula.yaml  .sops.yaml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.app.md  LICENSE.md  README.md  build.mjs  compose.dev.yml  compose.yml  copy.bara.new.sky  copy.bash  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.services.yaml  docker-compose.yml  first_time_setup.sh  install.bash  jest-transform-esbuild.js  jest.config.js  knip.ts  lerna.json  nx.json  package.json  pnpm-lock.yaml  (+7 more)
.github/workflows/: cla.yaml  secrets_sops_smoke.yml
.secrets/: dev.env.enc
@plasmic/cli/: README  package.json
@plasmic/react-web/: README  package.json
@plasmicapp/cli/: .eslintrc.js  README  README.internal  build.sh  package.json  tsconfig-transform.json  tsconfig.json
@plasmicapp/code-merger/: README.md  (+1 more)
plasmic/: index.js  package.json
plasmic-cli/: README  package.json
plasmic-p/: package.json
plasmicpkgs/: README.md
plasmicpkgs-dev/: .env.example  README.md  package.json  plasmic-init-client.tsx  plasmic-init.ts  plasmic-register-dev-meta.ts
platform/pybackend/: .cookiecutter.json  .darglint  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bandit.yml  codecov.yml  noxfile.py  pyproject.toml  setup.sh  start.sh
platform/pybackend/.github/: dependabot.yml
platform/pybackend/.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
platform/pybackend/docs/: codeofconduct.md  conf.py  contributing.md  index.md  license.md  reference.md  requirements.txt  usage.md
platform/pybackend/src/pybackend/: __init__.py  __main__.py  apiserver.py
platform/pybackend/tests/: __init__.py  test_main.py
scripts/: bootstrap.sh  deploy-spa.sh  internal-react-slick.patch  local-publish.sh  publish-api-doc-model.sh  secrets  upgrade-internal.bash
(+7705 files in other folders)
