[tool.poetry]
name = "pybackend"
version = "0.0.0"
description = "Plasmic DB service"
authors = ["Plasmic Team <team@plasmic.app>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/plasmicops/pybackend"
repository = "https://github.com/plasmicops/pybackend"
documentation = "https://pybackend.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/plasmicops/pybackend/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
sqlalchemy = "^2.0.19"
shillelagh = {extras = ["gsheetsapi"], version = "^1.2.6"}
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
ipdb = "^0.13.13"
pydynamodb = "^0.5.4"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = {extras = ["d"], version = ">=23.7.0"}
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
jupyterlab = "^4.0.4"

[tool.poetry.scripts]
pybackend = "pybackend.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pybackend", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
